2022-03-24 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sdas/as8051/i51adr.c,
	  sdas/as8051/i51mch.c,
	  sdas/as8051/i51pst.c:
	  Merge error messages from upstream ASxxxx 5.40.

2022-03-24 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sdas/asz80/z80.h:
	  Fix .allow_undocumented for z80 [bugs:#3275].

2022-03-24 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sdas/asxxsrc/assubr.c:
	  Fix detailed error messages in sdas.

2022-03-23 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* support/regression/tests/bitint.c,
	  support/regression/tests/bitintarith.c,
	  support/regression/tests/bitintbitfield.c,
	  support/regression/tests/bitintvararg.c,
	  support/regression/tests/widebitintbitfield.c:
	  Enable some tests for bit-precise integers on clang 11 host.

2022-03-22 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* src/SDCCcse.c,
	  support/regression/tests/bitint.c:
	  Fix bug #3371.

2022-03-22 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sdas/asz80/z80mch.c:
	  Fix/add cycles of z80 and z80n.

2022-03-20 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* src/SDCCglue.c:
	  Fix bug #3353.

2022-03-20 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* src/pdk/gen.c,
	  support/regression/tests/bug-2368.c,
	  support/regression/tests/bug-2770.c,
	  support/regression/tests/bug-3231.c,
	  support/regression/tests/bug3440327.c,
	  support/regression/tests/cse.c,
	  support/regression/tests/gcc-torture-execute-20021118-1.c,
	  support/regression/tests/gcc-torture-execute-20040707-1.c,
	  support/regression/tests/gcc-torture-execute-20050713-1.c,
	  support/regression/tests/gcc-torture-execute-20180131-1.c,
	  support/regression/tests/gcc-torture-execute-pr67226.c,
	  support/regression/tests/malloc.c,
	  support/regression/tests/memory.c,
	  support/regression/tests/preserves_regs.c,
	  support/regression/tests/structparam.c:
	  struct parameters for pdk (--stack-auto only).
