@@ -32,11 +32,11 @@ struct {
 
 void testWideBitIntBitField(void)
 {
-  ASSERT (_Generic(bf2.bw, bitinttype: 1, default: 0) == 1);
-  ASSERT (_Generic(bf2.bw_1, bitinttype: 1, default: 0) == 1);
+#if __SDCC_BITINT_MAXWIDTH >= {width} // TODO: When we can regression-test in --std-c23 mode, use the standard macro from limits.h instead!
+  //ASSERT (_Generic(bf2.bw, bitinttype: 1, default: 0) == 1);
+  //ASSERT (_Generic(bf2.bw_1, bitinttype: 1, default: 0) == 1);
 
 #ifndef __clang_major__ // clang 11 doesn't support == between _BitInt and int
-#if __SDCC_BITINT_MAXWIDTH >= {width} // TODO: When we can regression-test in --std-c23 mode, use the standard macro from limits.h instead!
   ASSERT (bf.bw == 5);
   ASSERT (bf.b4 == 6);
   ASSERT (bf.b == false);
